--- a/style.css
+++ b/style.css
@@ -40,12 +40,14 @@ html {
     border-radius: 10px;
     transform: translate(0 , -180%);
     font-size: 100px;
+    color: #229a;
 }
 
 #buttons {
     position: absolute;
-    width: 25em;
-    font-size: 25px;
+    width: 15.8em;
+    font-size: 45px;
+    font-weight: 800;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -55,8 +57,8 @@ html {
 
 .btn {
     color: white;
-    width: 5.7em;
-    height: 5.2em;
+    width: 3.15em;
+    height: 2.9em;
     background-color: #fff4;
     border-radius: 10px;
     text-align: center;
@@ -66,7 +68,6 @@ html {
     margin: 4px;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-    text-shadow: 2px 2px 3px black;
 }
 
 .btn:hover,
